# CUDA_Gridder

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  gridder.cu  gridder.h  main.cpp  runtimeclass.yaml
charts/cuda-gridder/: Chart.yaml  values.yaml
charts/cuda-gridder/templates/: _helpers.tpl  gridder-job.yaml
